--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -2,7 +2,7 @@ h5 Search
 .row
     .col-md-8
         .form-group.form-group-default
-            label Games
-            input#game.form-control(type='text', required='')
+            label Deck
+            input#deck.form-control(type='text', required='')
     .col-md-4
-        button.btn.btn-primary(onClick='games.listGames($("#game").val())') Search
+        button.btn.btn-primary(onClick='deck.listGames($("#deck").val())') Search
