--- a/contents/cards/ui.jade
+++ b/contents/cards/ui.jade
@@ -5,7 +5,7 @@ h5 Search
             label Cards
             input#card.form-control(type='text', required='')
     .col-md-4
-        button.btn.btn-primary(onClick='cards.searchByName($("#card").val(), $("#white").on(), $("#blue").on(), $("black").on(), $("red").on(), $("green").on(), $("colorless").on())') Search
+        button.btn.btn-primary(onClick='cards.searchByName($("#card").val(), $("#white").on(), $("#blue").on(), $("#black").on(), $("#red").on(), $("#green").on(), $("#colorless").on(), $("#cmc").val(), $("#type").val())') Search
 .row
     .col-md-1
         label White  
@@ -15,15 +15,15 @@ h5 Search
             input#blue.checkbox(type='checkbox')
     .col-md-1
         label Black  
-            input#black.has-success(type='checkbox')
+            input#black.checkbox(type='checkbox')
     .col-md-1
         label Red  
-            input#red.has-success(type='checkbox')
+            input#red.checkbox(type='checkbox')
     .col-md-1
         label Green  
-            input#green.has-success(type='checkbox')
+            input#green.checkbox(type='checkbox')
     label Coloress  
-        input#colorless.has-success(type='checkbox')
+        input#colorless.checkbox(type='checkbox')
 .row
     .col-md-4
         label Converted Mana Cost
