--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -27,6 +27,6 @@ html(lang='en')
     // our app
     script(src="cards/index.js")
     script(src="deck/index.js")
-
+    script(src="instructions/index.js")
     // main app
     script(src="js/app.js")
