--- a/templates/navbar.jade
+++ b/templates/navbar.jade
@@ -4,3 +4,5 @@ div.panel
             a#cards.button Cards
         li
             a#deck.button Deck
+        li
+            a#instructions.button Instruction
