--- a/contents/instructions/ui.jade
+++ b/contents/instructions/ui.jade
@@ -20,7 +20,7 @@ div.panel
           #slideshow-inner
             ul
               li#slide1
-                img(src='http://cssdeck.com/uploads/media/items/3/3yiC6Yq.jpg')
+                img(src='http://magic.wizards.com/sites/mtg/files/images/featured/EN_WhatIsMagic_Header_0.jpg')
                 .description
                   input#show-description-1(type='checkbox')
                   label.show-description-label(for='show-description-1') I
@@ -29,7 +29,7 @@ div.panel
                     p
                       | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
               li#slide2
-                img(src='http://cssdeck.com/uploads/media/items/4/40Ly3VB.jpg')
+                img(src='http://magic.wizards.com/sites/mtg/files/images/featured/EN_Duels2015_Header.jpg')
                 .description
                   input#show-description-2(type='checkbox')
                   label.show-description-label(for='show-description-2') I
@@ -38,7 +38,7 @@ div.panel
                     p
                       | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
               li#slide3
-                img(src='http://cssdeck.com/uploads/media/items/0/00kih8g.jpg')
+                img(src='http://magic.wizards.com/sites/mtg/files/images/featured/EN_PlayLocal_InlineL_A.jpg')
                 .description
                   input#show-description-3(type='checkbox')
                   label.show-description-label(for='show-description-3') I
@@ -47,7 +47,7 @@ div.panel
                     p
                       | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
               li#slide4
-                img(src='http://cssdeck.com/uploads/media/items/2/2rT2vdx.jpg')
+                img(src='http://magic.wizards.com/sites/mtg/files/images/featured/EN_OrganizedPlay_Header.jpg')
                 .description
                   input#show-description-4(type='checkbox')
                   label.show-description-label(for='show-description-4') I
@@ -56,7 +56,7 @@ div.panel
                     p
                       | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
               li#slide5
-                img(src='http://cssdeck.com/uploads/media/items/8/8k3N3EL.jpg')
+                img(src='http://magic.wizards.com/sites/mtg/files/images/featured/EN_Community_Header_4.jpg')
                 .description
                   input#show-description-5(type='checkbox')
                   label.show-description-label(for='show-description-5') I
@@ -68,17 +68,21 @@ div.panel
 
 
 
-    <label> Instruction Videos </label>
+    #paper
+        #paper_top
+            #paper_bottom
+            
+                <label> Instruction Videos </label>
 
-    div.row
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/GadqHggATe8', frameborder='0', allowfullscreen='')
-    div.row
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/mCGJ_UUtS1Q', frameborder='0', allowfullscreen='')
-    div.row
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/Jik47gv8dn4', frameborder='0', allowfullscreen='')
-    div.row
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/qoO0fFAVXzE', frameborder='0', allowfullscreen='')
-    div.row
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/fG3eXBccyWg', frameborder='0', allowfullscreen='')
-    div.row
-        iframe(width='560', height='315', src='https://www.youtube.com/embed/5FTAbftngf0', frameborder='0', allowfullscreen='')
+                div.row
+                    iframe(width='560', height='315', src='https://www.youtube.com/embed/GadqHggATe8', frameborder='0', allowfullscreen='')
+                div.row
+                    iframe(width='560', height='315', src='https://www.youtube.com/embed/mCGJ_UUtS1Q', frameborder='0', allowfullscreen='')
+                div.row
+                    iframe(width='560', height='315', src='https://www.youtube.com/embed/Jik47gv8dn4', frameborder='0', allowfullscreen='')
+                div.row
+                    iframe(width='560', height='315', src='https://www.youtube.com/embed/qoO0fFAVXzE', frameborder='0', allowfullscreen='')
+                div.row
+                    iframe(width='560', height='315', src='https://www.youtube.com/embed/fG3eXBccyWg', frameborder='0', allowfullscreen='')
+                div.row
+                    iframe(width='560', height='315', src='https://www.youtube.com/embed/5FTAbftngf0', frameborder='0', allowfullscreen='')
