--- a/contents/style/pages/css/pages.css
+++ b/contents/style/pages/css/pages.css
@@ -35,6 +35,38 @@ Generated From LESS
 29. Print
 30. Demo
 -------------------------------------------------------------------*/
+/*over write*/
+
+.container{
+  width: 1100px;
+
+}
+
+
+/*paper design*/
+#paper{
+  background: url("http://www.dhcards.com/images/paper_middle.png") repeat-y center top;
+  width: 620px;
+  position: relative;
+}
+
+#paper_top {
+  background: transparent url"http://www.dhcards.com/images/paper_top.jpg") top center no-repeat;
+  position: relative;
+}
+
+#paper_bottom {
+  background: transparent url("http://www.dhcards.com/images/paper_bottom_noshadow.png") no-repeat center bottom;
+  position: relative;
+  top: 54px;
+  min-height: 450px;
+  height: auto !important;
+  height: 500px;
+}
+
+
+
+
 /*------------------------------------------------------------------
 [1. Layouts]
 */
