Instruction tab improvvement
add some cool features

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -8,6 +8,13 @@ html(lang='en')
     link(href="style/boostrapv3/css/bootstrap.min.css", rel="stylesheet", type="text/css")
     link(href="style/pages/css/pages.css", rel="stylesheet", type="text/css")
     link(href="style/sliders/css/sliders.css", rel="stylesheet", type="text/css")
+
+    link(rel='stylesheet', href='style/VideoLightBox_videolb/videolightbox.css', type='text/css')
+    link(rel='stylesheet', href='style/VideoLightBox_videolb/overlay-minimal.css',type='text/css')
+    script(src='style/VideoLightBox_videolb/jquery.js', type='text/javascript')
+    script(src='style/VideoLightBox_videolb/swfobject.js', type='text/javascript')
+    
+
   body
 
     div.container-fluid
@@ -23,6 +30,11 @@ html(lang='en')
     script(src="http://code.jquery.com/jquery.min.js")
     script(src="js/jade.js")
     script(src="js/lodash.min.js")
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+
+    
+    
+
 
     // our app
     script(src="cards/index.js")
