--- a/contents/instructions/ui.jade
+++ b/contents/instructions/ui.jade
@@ -68,21 +68,34 @@ div.panel
 
 
 
-    #paper
-        #paper_top
-            #paper_bottom
-            
-                <label> Instruction Videos </label>
+        #paper
+            #paper_top
+                #paper_bottom
+                  #paper_header
+                    <h2 style="position: relative; top: -150px;"> Instruction Videos </h2>
 
-                div.row
-                    iframe(width='560', height='315', src='https://www.youtube.com/embed/GadqHggATe8', frameborder='0', allowfullscreen='')
-                div.row
-                    iframe(width='560', height='315', src='https://www.youtube.com/embed/mCGJ_UUtS1Q', frameborder='0', allowfullscreen='')
-                div.row
-                    iframe(width='560', height='315', src='https://www.youtube.com/embed/Jik47gv8dn4', frameborder='0', allowfullscreen='')
-                div.row
-                    iframe(width='560', height='315', src='https://www.youtube.com/embed/qoO0fFAVXzE', frameborder='0', allowfullscreen='')
-                div.row
-                    iframe(width='560', height='315', src='https://www.youtube.com/embed/fG3eXBccyWg', frameborder='0', allowfullscreen='')
-                div.row
-                    iframe(width='560', height='315', src='https://www.youtube.com/embed/5FTAbftngf0', frameborder='0', allowfullscreen='')
+                  #paper_content
+                    div.row
+                        <div class="videogallery">
+                        
+                          
+
+                        <a class="voverlay" href="http://www.youtube.com/v/GadqHggATe8?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer" title="Learn to Play Magic: The Gathering, Part 1: Welcome to the Multiverse"><img src="style/VideoLightBox_videolb/thumbnails/0.png" alt="Learn to Play Magic: The Gathering, Part 1: Welcome to the Multiverse" /><span></span></a>
+
+                        
+                        <a class="voverlay" href="http://www.youtube.com/v/mCGJ_UUtS1Q?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer" title="Learn to Play Magic: The Gathering, Part 2: The Five Colors of Mana"><img src="style/VideoLightBox_videolb/thumbnails/1.png" alt="Learn to Play Magic: The Gathering, Part 2: The Five Colors of Mana" /><span></span></a>
+
+                        
+                        <a class="voverlay" href="http://www.youtube.com/v/Jik47gv8dn4?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer" title="Learn to Play Magic: The Gathering, Part 3: Game Zones and Parts of a Card"><img src="style/VideoLightBox_videolb/thumbnails/2.png" alt="Learn to Play Magic: The Gathering, Part 3: Game Zones and Parts of a Card" /><span></span></a>
+
+                        
+                        <a class="voverlay" href="http://www.youtube.com/v/qoO0fFAVXzE?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer" title="Learn to Play Magic: The Gathering, Part 4: Card Types"><img src="style/VideoLightBox_videolb/thumbnails/3.png" alt="Learn to Play Magic: The Gathering, Part 4: Card Types" /><span></span></a>
+                        <a class="voverlay" href="http://www.youtube.com/v/fG3eXBccyWg?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer" title="Learn to Play Magic: The Gathering, Part 5: Parts of a Turn"><img src="style/VideoLightBox_videolb/thumbnails/4.png" alt="Learn to Play Magic: The Gathering, Part 5: Parts of a Turn" /><span></span></a>
+                        <a class="voverlay" href="http://www.youtube.com/v/5FTAbftngf0?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer" title="Learn to Play Magic: The Gathering, Part 6: The Next Step"><img src="style/VideoLightBox_videolb/thumbnails/5.png" alt="Learn to Play Magic: The Gathering, Part 6: The Next Step" /><span></span></a><span class="videolb"><a href="http://videolightbox.com">Embed Video Website</a> by VideoLightBox.com v3.0m</span>
+                        </div>
+
+                        <script src="style/VideoLightBox_videolb/jquery.tools.min.js" type="text/javascript"></script>
+                        <script src="style/VideoLightBox_videolb/videolightbox.js" type="text/javascript"></script>
+                    
+
+
