--- a/contents/instructions/ui.jade
+++ b/contents/instructions/ui.jade
@@ -1,7 +1,7 @@
 div.panel
     html
       body
-        #slideshow-wrap
+        #slideshow-wrap.ani.swing
           input#button-1(type='radio', name='controls', checked='checked')
           label(for='button-1')
           input#button-2(type='radio', name='controls')
