--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -15,6 +15,9 @@ html(lang='en')
     script(src='style/VideoLightBox_videolb/swfobject.js', type='text/javascript')
     
     link(rel='stylesheet', href='style/animate.css-master/animate.min.css', type='text/css')
+    link(rel='stylesheet', href='style/css3-animate-it-master/css/animations.css', type='text/css')
+    
+
   body
 
     div.container-fluid
@@ -31,7 +34,7 @@ html(lang='en')
     script(src="js/jade.js")
     script(src="js/lodash.min.js")
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-
+    
     
     
 
@@ -42,3 +45,7 @@ html(lang='en')
     script(src="instructions/index.js")
     // main app
     script(src="js/app.js")
+
+    //animation with scrolling
+    //script(src='style/css3-animate-it-master/js/css3-animate-it.js', type='text/javascript')
+
