--- a/contents/style/animate.css-master/animate.css
+++ b/contents/style/animate.css-master/animate.css
@@ -7,31 +7,31 @@ Licensed under the MIT license - http://opensource.org/licenses/MIT
 Copyright (c) 2015 Daniel Eden
 */
 
-.animated {
+.ani {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
-.animated.infinite {
+.ani.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
 }
 
-.animated.hinge {
+.ani.hinge {
   -webkit-animation-duration: 2s;
   animation-duration: 2s;
 }
 
-.animated.bounceIn,
-.animated.bounceOut {
+.ani.bounceIn,
+.ani.bounceOut {
   -webkit-animation-duration: .75s;
   animation-duration: .75s;
 }
 
-.animated.flipOutX,
-.animated.flipOutY {
+.ani.flipOutX,
+.ani.flipOutY {
   -webkit-animation-duration: .75s;
   animation-duration: .75s;
 }
@@ -1676,7 +1676,7 @@ Copyright (c) 2015 Daniel Eden
   }
 }
 
-.animated.flip {
+.ani.flip {
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
   -webkit-animation-name: flip;
