--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -14,7 +14,7 @@ html(lang='en')
     script(src='style/VideoLightBox_videolb/jquery.js', type='text/javascript')
     script(src='style/VideoLightBox_videolb/swfobject.js', type='text/javascript')
     
-    link(rel='stylesheet', href='style/animate.css-master/animate.min.css', type='text/css')
+    //link(rel='stylesheet', href='style/animate.css-master/animate.min.css', type='text/css')
     link(rel='stylesheet', href='style/css3-animate-it-master/css/animations.css', type='text/css')
     
 
