--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -1,8 +1,4 @@
-h5 Search
+h5 Deck UI
 .row
     .col-md-8
-        .form-group.form-group-default
-            label Deck
-            input#deck.form-control(type='text', required='')
-    .col-md-4
-        button.btn.btn-primary(onClick='deck.listGames($("#deck").val())') Search
+        button.btn.btn-primary(onClick='deck.getCards()') GetCards
