Testing posting data locally

--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -1,4 +1,4 @@
 h5 Deck UI
 .row
     .col-md-8
-        button.btn.btn-primary(onClick='deck.getCards()') GetCards
+        button.btn.btn-primary(onClick='deck.postTest(event)') PostTest
