--- a/contents/deck/view.jade
+++ b/contents/deck/view.jade
@@ -6,7 +6,7 @@ table.table.table-striped
     tbody
         
         style.
-            game {
+            ty {
                 font-size: 20px;
                 color: #000000;
             }
@@ -14,4 +14,4 @@ table.table.table-striped
         tr
             td
                 b
-                    game= "foo"
+                    test= "foo"
