--- a/contents/deck/list.jade
+++ b/contents/deck/list.jade
@@ -6,22 +6,12 @@ table.table.table-striped
     tbody
         
         style.
-            game {
+            test {
                 font-size: 24px;
-                color: #000000;
-            }
-        style.
-            misc {
-                font-size: 14px;
-                color: #000000;
-            }
-        style.
-            scr {
-                font-size: 20px;
                 color: #000000;
             }
         
         each item in data
             tr
                 td
-                    game= "zing"
+                    test= "zing"
