jade console.log gives correct object

--- a/contents/cards/view.jade
+++ b/contents/cards/view.jade
@@ -8,7 +8,9 @@ table.table.table-striped
             each edition in item.editions
                 tr
                     if edition.multiverse_id > 0
-                        button.btn.btn-primary(onClick='deck.addCard(item)')
+                        script.
+                            console.log(!{JSON.stringify(item)});
+                        button.btn.btn-primary(onClick='deck.addCard(!{JSON.stringify(item)})')
                             img(src="https://api.mtgdb.info/content/hi_res_card_images/" + edition.multiverse_id + ".jpg", height=280)
                             
 
