Cards can be added.  Images in deck do not match the edition.

--- a/contents/cards/view.jade
+++ b/contents/cards/view.jade
@@ -10,6 +10,8 @@ table.table.table-striped
                     if edition.multiverse_id > 0
                         script.
                             var card = !{JSON.stringify(item)};
+                            var cardEditionObj = !{JSON.stringify(edition)};
                             //console.log("Card object: ", card);
-                        button.btn.btn-primary(onClick='deck.addCard(card)')
+                            console.log("Image id: ", cardEditionObj.multiverse_id);
+                        button.btn.btn-primary(onClick='deck.addCard(card,cardEditionObj)')
                             img(src="https://api.mtgdb.info/content/hi_res_card_images/" + edition.multiverse_id + ".jpg", height=280)
