--- a/contents/deck/view.jade
+++ b/contents/deck/view.jade
@@ -6,9 +6,9 @@ table.table.table-striped
     tbody
         each item in data
             tr
-                if item.img_id > 0
+                if item.mult_id > 0
                     script.
-                        var card = !{JSON.stringify(item.card_obj)};
-                        //console.log("Card object: ", card);
-                    button.btn.btn-primary(onClick='deck.removeCard(card)')
-                        img(src="https://api.mtgdb.info/content/hi_res_card_images/" + item.img_id + ".jpg", height=280)
+                        var cardObj = !{JSON.stringify(item)};
+                        //console.log("Card object: ", cardObj);
+                    button.btn.btn-primary(onClick='deck.removeCard(#{JSON.stringify(item)})')
+                        img(src="https://api.mtgdb.info/content/hi_res_card_images/" + item.mult_id + ".jpg", height=280)
