--- a/contents/deck/view.jade
+++ b/contents/deck/view.jade
@@ -8,7 +8,7 @@ table.table.table-striped
             tr
                 if item.mult_id > 0
                     script.
-                        var cardObj = !{JSON.stringify(item)};
+                        //var cardObj = !{JSON.stringify(item)};
                         //console.log("Card object: ", cardObj);
                     button.btn.btn-primary(onClick='deck.removeCard(#{JSON.stringify(item)})')
                         img(src="https://api.mtgdb.info/content/hi_res_card_images/" + item.mult_id + ".jpg", height=280)
