--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -2,3 +2,6 @@ h5 Deck UI
 .row
     .col-md-8
         button.btn.btn-primary(onClick='deck.postTest(event)') PostTest
+.row
+    .col-md-4
+        button.btn.btn-primary(onClick='deck.resetDeck(event)') Reset Deck
