Sort by rarity button

--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -5,3 +5,6 @@ h5 Deck UI
 .row
     .col-md-4
         button.btn.btn-primary(onClick='deck.resetDeck(event)') Reset Deck
+.row
+    .col-md-4
+        button.btn.btn-primary(onClick='deck.sortByRarity()') Sort By Rarity
