Sort by color works... The sort does not handle ordering of 2/3/4 colored cards other than ensuring that 2-colored preceeds 3-color preceeds 4-color.

--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -8,3 +8,9 @@ h5 Deck UI
 .row
     .col-md-4
         button.btn.btn-primary(onClick='deck.sortByRarity()') Sort By Rarity
+.row
+    .col-md-4
+        button.btn.btn-primary(onClick='deck.sortByCmc()') Sort By Cost
+.row
+    .col-md-4
+        button.btn.btn-primary(onClick='deck.sortByColor()') Sort By Color
