Added functionality to save deck locally as JSON

--- a/contents/deck/ui.jade
+++ b/contents/deck/ui.jade
@@ -14,3 +14,6 @@ h5 Deck UI
 .row
     .col-md-4
         button.btn.btn-primary(onClick='deck.sortByColor()') Sort By Color
+.row
+    .col-md-8
+        button.btn.btn-primary(onClick='deck.saveDeck()') Save Deck
