--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -34,6 +34,7 @@ html(lang='en')
     script(src="js/jade.js")
     script(src="js/lodash.min.js")
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='js/FileSaver.min.js')
     
     
     
