--- a/contents/cards/ui.jade
+++ b/contents/cards/ui.jade
@@ -8,19 +8,24 @@ h5 Search
         button.btn.btn-primary(onClick='cards.searchByName($("#card").val(), $("#white").on(), $("#blue").on(), $("#black").on(), $("#red").on(), $("#green").on(), $("#format").val(), $("#type").val(), $("#supertype").val(), $("#cmc").val(), $("#rarity").val())') Search
 .row
     .col-md-1
-        label White  
+        label 
+            img(src="style/pages/img/icons/White_Mana.png") 
             input#white.checkbox(type='checkbox')
     .col-md-1
-        label Blue  
+        label 
+            img(src="style/pages/img/icons/Blue_Mana.png")  
             input#blue.checkbox(type='checkbox')
     .col-md-1
-        label Black  
+        label
+            img(src="style/pages/img/icons/Black_Mana.png")  
             input#black.checkbox(type='checkbox')
     .col-md-1
-        label Red  
+        label
+            img(src="style/pages/img/icons/Red_Mana.png")
             input#red.checkbox(type='checkbox')
     .col-md-1
-        label Green  
+        label
+            img(src="style/pages/img/icons/Green_Mana.png")  
             input#green.checkbox(type='checkbox')
     // Because deckbrew is dumb, no colorless
 .row
