Can filter searches by converted man cost.  Tweak card image sizes.

--- a/contents/cards/ui.jade
+++ b/contents/cards/ui.jade
@@ -69,7 +69,7 @@ h5 Search
                 option(value='snow') Snow
                 option(value='world') World
     .col-md-4
-        label Converted Mana Cost
+        label Converted Mana Cost Filter
             select#cmc
                 option(value='') Any
                 option(value=0) 0
