--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -21,7 +21,8 @@ html(lang='en')
   body
 
     div.container-fluid
-        h1 mtgdeckbuilder
+        h1(style='font-family: Impact, Charcoal, sans-serif;color: rgb(208, 177, 22);') MTGdeckbuilder
+
         include navbar
 
     div#content
