--- a/contents/style/pages/css/pages.css
+++ b/contents/style/pages/css/pages.css
@@ -4442,13 +4442,15 @@ body > .pgn-wrapper {
   background-color: #e6e6e6;
 }
 .nav-tabs > li > a {
+  letter-spacing: .2em;
+  -webkit-font-smoothing: auto;
   border-radius: 0;
   padding: 15px 20px;
   margin-right: 0;
-  font-family: 'Montserrat';
+  font-family: "DIN Next W01",sans-serif;
   font-weight: 400;
-  color: rgba(98, 98, 98, 0.7);
-  font-size: 12px;
+  color: rgb(226, 226, 226);
+  font-size: 14px;
   min-width: 70px;
   text-transform: uppercase;
   border-color: transparent;
@@ -4457,7 +4459,7 @@ body > .pgn-wrapper {
 .nav-tabs > li > a:focus {
   background: transparent;
   border-color: transparent;
-  color: #626262;
+  color: rgb(208, 190, 7);
 }
 .nav-tabs > li > a .tab-icon {
   margin-right: 6px;
